[gd_scene load_steps=7 format=3 uid="uid://ccdqffwm6isho"]

[ext_resource type="Script" uid="uid://du6fa467ul2e2" path="res://scripts/scene_menu.gd" id="1_4xdfu"]
[ext_resource type="Shader" uid="uid://cx1q61sgrtn88" path="res://shaders/scene_menu.gdshader" id="2_y2fj4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ld4q"]
shader = ExtResource("2_y2fj4")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_2ld4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_y2fj4"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.879]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_44wrp"]
_data = {
&"RESET": SubResource("Animation_2ld4q"),
&"blur": SubResource("Animation_y2fj4")
}

[node name="SceneMenu" type="Control"]
process_mode = 3
z_index = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4xdfu")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2ld4q")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
offset_left = -110.0
offset_top = 1.0
offset_right = 120.0
offset_bottom = 74.0
scale = Vector2(0.336064, 0.336064)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
text = "Do you want to leave?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
alignment = 1

[node name="YesButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox/HBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="NoButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox/HBoxContainer"]
layout_mode = 2
text = "No"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_44wrp")
}

[connection signal="pressed" from="PanelContainer/MarginContainer/MainVBox/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/MainVBox/HBoxContainer/YesButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/MainVBox/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/MainVBox/HBoxContainer/NoButton" to="." method="_on_work_button_pressed"]
